--- a/SophieXML/SophieXML/Dockerfile
+++ b/SophieXML/SophieXML/Dockerfile
@@ -28,14 +28,14 @@ ENTRYPOINT ["dotnet", "/sophie_app/SophieXML.dll"]
 # 1. Build docker-images (Require change Endpoints):
 # Update Endpoints in appsettings.Production.json
 # dotnet publish -o '/Users/thuctran/Desktop/App' -c Release
-# docker build --no-cache -t aspnetcore_xml:v1.0 -f Dockerfile . 
+# docker build --no-cache -t sophie_xml:v1.0 -f Dockerfile . 
 
 # 2. Run docker-images and auto remove after stop:
-# docker run -it -p 7080:7080 -p 7443:7443 -v $PWD/Logs:/sophie_app/Logs/ --rm --name aspnetcore_xml aspnetcore_xml:v1.0 
+# docker run -it -p 7080:7080 -p 7443:7443 -v $PWD/Logs:/sophie_app/Logs/ --rm --name sophie_xml sophie_xml:v1.0 
 
 # 2. Run docker-images:
-# docker run -d -p 7080:7080 -p 7443:7443 -v $PWD/Logs:/sophie_app/Logs/ --name aspnetcore_xml aspnetcore_xml:v1.0
-# docker run -d -p 7080:7080 -p 7443:7443 -v $PWD/Logs:/sophie_app/Logs/ --name aspnetcore_xml 26061989/sophie_xml:v1.0
+# docker run -d -p 7080:7080 -p 7443:7443 -v $PWD/Logs:/sophie_app/Logs/ --name sophie_xml sophie_xml:v1.0
+# docker run -d -p 7080:7080 -p 7443:7443 -v $PWD/Logs:/sophie_app/Logs/ --name sophie_xml 26061989/sophie_xml:v1.0
 
 # 2. Run docker-compose:
 # docker-compose -f docker-compose.yml -p thiago_teams up -d sophie_backend
@@ -44,9 +44,9 @@ ENTRYPOINT ["dotnet", "/sophie_app/SophieXML.dll"]
 # docker-compose -f docker-compose.yml -p thiago_teams rm -f -s -v -a sophie_backend
 
 # 3. Connnect docker:
-# docker exec -it aspnetcore_xml /bin/sh
+# docker exec -it sophie_xml /bin/sh
 
 # 4. Push to dockerhub:
 # docker login
-# docker tag aspnetcore_xml:v1.0 26061989/sophie_xml:v1.0
+# docker tag sophie_xml:v1.0 26061989/sophie_xml:v1.0
 # docker push 26061989/sophie_xml:v1.0
